--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path_provider: ^2.1.3
   pie_chart: ^5.4.0
+  telephony: ^0.2.0
 
 dev_dependencies:
   flutter_test:
